cdk/eks-blueprints/cdk.out/gpu-demo-v5.template.json
{
 "Description": "Blueprints tracking (qs-1s1r465hk)",
 "Resources": {
  "gpudemov5vpcDEEC3660": {
   "Type": "AWS::EC2::VPC",
   "Properties": {
    "CidrBlock": "10.0.0.0/16",
    "EnableDnsHostnames": true,
    "EnableDnsSupport": true,
    "InstanceTenancy": "default",
    "Tags": [
     {
      "Key": "Name",
      "Value": "gpu-demo-v5/gpu-demo-v5-vpc"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "gpu-demo-v5/gpu-demo-v5-vpc/Resource"
   }
  },
  "gpudemov5vpcPublicSubnet1SubnetC7F5E40A": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "VpcId": {
     "Ref": "gpudemov5vpcDEEC3660"
    },
    "AvailabilityZone": "ap-northeast-2a",
    "CidrBlock": "10.0.0.0/19",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "kubernetes.io/role/elb",
      "Value": "1"
     },
     {
      "Key": "Name",
      "Value": "gpu-demo-v5/gpu-demo-v5-vpc/PublicSubnet1"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "gpu-demo-v5/gpu-demo-v5-vpc/PublicSubnet1/Subnet"
   }
  },
  "gpudemov5vpcPublicSubnet1RouteTableA1EC268D": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "VpcId": {
     "Ref": "gpudemov5vpcDEEC3660"
    },
    "Tags": [
     {
      "Key": "kubernetes.io/role/elb",
      "Value": "1"
     },
     {
      "Key": "Name",
      "Value": "gpu-demo-v5/gpu-demo-v5-vpc/PublicSubnet1"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "gpu-demo-v5/gpu-demo-v5-vpc/PublicSubnet1/RouteTable"
   }
  },
  "gpudemov5vpcPublicSubnet1RouteTableAssociation01AD7DD5": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "gpudemov5vpcPublicSubnet1RouteTableA1EC268D"
    },
    "SubnetId": {
     "Ref": "gpudemov5vpcPublicSubnet1SubnetC7F5E40A"
    }
   },
   "Metadata": {
    "aws:cdk:path": "gpu-demo-v5/gpu-demo-v5-vpc/PublicSubnet1/RouteTableAssociation"
   }
  },
  "gpudemov5vpcPublicSubnet1DefaultRouteDEA70FD6": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "RouteTableId": {
     "Ref": "gpudemov5vpcPublicSubnet1RouteTableA1EC268D"
    },
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "gpudemov5vpcIGW083CA596"
    }
   },
   "DependsOn": [
    "gpudemov5vpcVPCGWF93B7396"
   ],
   "Metadata": {
    "aws:cdk:path": "gpu-demo-v5/gpu-demo-v5-vpc/PublicSubnet1/DefaultRoute"
   }
  },
  "gpudemov5vpcPublicSubnet1EIP19CC3667": {
   "Type": "AWS::EC2::EIP",
   "Properties": {
    "Domain": "vpc",
    "Tags": [
     {
      "Key": "kubernetes.io/role/elb",
      "Value": "1"
     },
     {
      "Key": "Name",
      "Value": "gpu-demo-v5/gpu-demo-v5-vpc/PublicSubnet1"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "gpu-demo-v5/gpu-demo-v5-vpc/PublicSubnet1/EIP"
   }
  },
  "gpudemov5vpcPublicSubnet1NATGateway7826681B": {
   "Type": "AWS::EC2::NatGateway",
   "Properties": {
    "SubnetId": {
     "Ref": "gpudemov5vpcPublicSubnet1SubnetC7F5E40A"
    },
    "AllocationId": {
     "Fn::GetAtt": [
      "gpudemov5vpcPublicSubnet1EIP19CC3667",
      "AllocationId"
     ]
    },
    "Tags": [
     {
      "Key": "kubernetes.io/role/elb",
      "Value": "1"
     },
     {
      "Key": "Name",
      "Value": "gpu-demo-v5/gpu-demo-v5-vpc/PublicSubnet1"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "gpu-demo-v5/gpu-demo-v5-vpc/PublicSubnet1/NATGateway"
   }
  },
  "gpudemov5vpcPublicSubnet2Subnet962CFD69": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "VpcId": {
     "Ref": "gpudemov5vpcDEEC3660"
    },
    "AvailabilityZone": "ap-northeast-2b",
    "CidrBlock": "10.0.32.0/19",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "kubernetes.io/role/elb",
      "Value": "1"
     },
     {
      "Key": "Name",
      "Value": "gpu-demo-v5/gpu-demo-v5-vpc/PublicSubnet2"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "gpu-demo-v5/gpu-demo-v5-vpc/PublicSubnet2/Subnet"
   }
  },
  "gpudemov5vpcPublicSubnet2RouteTable361F1F26": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "VpcId": {
     "Ref": "gpudemov5vpcDEEC3660"
    },
    "Tags": [
     {
      "Key": "kubernetes.io/role/elb",
      "Value": "1"
     },
     {
      "Key": "Name",
      "Value": "gpu-demo-v5/gpu-demo-v5-vpc/PublicSubnet2"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "gpu-demo-v5/gpu-demo-v5-vpc/PublicSubnet2/RouteTable"
   }
  },
  "gpudemov5vpcPublicSubnet2RouteTableAssociation2833F744": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "gpudemov5vpcPublicSubnet2RouteTable361F1F26"
    },
    "SubnetId": {
     "Ref": "gpudemov5vpcPublicSubnet2Subnet962CFD69"
    }
   },
   "Metadata": {
    "aws:cdk:path": "gpu-demo-v5/gpu-demo-v5-vpc/PublicSubnet2/RouteTableAssociation"
   }
  },
  "gpudemov5vpcPublicSubnet2DefaultRouteC2DAC168": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "RouteTableId": {
     "Ref": "gpudemov5vpcPublicSubnet2RouteTable361F1F26"
    },
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "gpudemov5vpcIGW083CA596"
    }
   },
   "DependsOn": [
    "gpudemov5vpcVPCGWF93B7396"
   ],
   "Metadata": {
    "aws:cdk:path": "gpu-demo-v5/gpu-demo-v5-vpc/PublicSubnet2/DefaultRoute"
   }
  },
  "gpudemov5vpcPublicSubnet2EIP32C98C46": {
   "Type": "AWS::EC2::EIP",
   "Properties": {
    "Domain": "vpc",
    "Tags": [
     {
      "Key": "kubernetes.io/role/elb",
      "Value": "1"
     },
     {
      "Key": "Name",
      "Value": "gpu-demo-v5/gpu-demo-v5-vpc/PublicSubnet2"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "gpu-demo-v5/gpu-demo-v5-vpc/PublicSubnet2/EIP"
   }
  },
  "gpudemov5vpcPublicSubnet2NATGatewayE2462A56": {
   "Type": "AWS::EC2::NatGateway",
   "Properties": {
    "SubnetId": {
     "Ref": "gpudemov5vpcPublicSubnet2Subnet962CFD69"
    },
    "AllocationId": {
     "Fn::GetAtt": [
      "gpudemov5vpcPublicSubnet2EIP32C98C46",
      "AllocationId"
     ]
    },
    "Tags": [
     {
      "Key": "kubernetes.io/role/elb",
      "Value": "1"
     },
     {
      "Key": "Name",
      "Value": "gpu-demo-v5/gpu-demo-v5-vpc/PublicSubnet2"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "gpu-demo-v5/gpu-demo-v5-vpc/PublicSubnet2/NATGateway"
   }
  },
  "gpudemov5vpcPublicSubnet3SubnetA8414912": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "VpcId": {
     "Ref": "gpudemov5vpcDEEC3660"
    },
    "AvailabilityZone": "ap-northeast-2c",
    "CidrBlock": "10.0.64.0/19",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "kubernetes.io/role/elb",
      "Value": "1"
     },
     {
      "Key": "Name",
      "Value": "gpu-demo-v5/gpu-demo-v5-vpc/PublicSubnet3"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "gpu-demo-v5/gpu-demo-v5-vpc/PublicSubnet3/Subnet"
   }
  },
  "gpudemov5vpcPublicSubnet3RouteTableC3BB4732": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "VpcId": {
     "Ref": "gpudemov5vpcDEEC3660"
    },
    "Tags": [
     {
      "Key": "kubernetes.io/role/elb",
      "Value": "1"
     },
     {
      "Key": "Name",
      "Value": "gpu-demo-v5/gpu-demo-v5-vpc/PublicSubnet3"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "gpu-demo-v5/gpu-demo-v5-vpc/PublicSubnet3/RouteTable"
   }
  },
  "gpudemov5vpcPublicSubnet3RouteTableAssociation49659663": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "gpudemov5vpcPublicSubnet3RouteTableC3BB4732"
    },
    "SubnetId": {
     "Ref": "gpudemov5vpcPublicSubnet3SubnetA8414912"
    }
   },
   "Metadata": {
    "aws:cdk:path": "gpu-demo-v5/gpu-demo-v5-vpc/PublicSubnet3/RouteTableAssociation"
   }
  },
  "gpudemov5vpcPublicSubnet3DefaultRouteE2560B2D": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "RouteTableId": {
     "Ref": "gpudemov5vpcPublicSubnet3RouteTableC3BB4732"
    },
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "gpudemov5vpcIGW083CA596"
    }
   },
   "DependsOn": [
    "gpudemov5vpcVPCGWF93B7396"
   ],
   "Metadata": {
    "aws:cdk:path": "gpu-demo-v5/gpu-demo-v5-vpc/PublicSubnet3/DefaultRoute"
   }
  },
  "gpudemov5vpcPublicSubnet3EIP2A97ECC3": {
   "Type": "AWS::EC2::EIP",
   "Properties": {
    "Domain": "vpc",
    "Tags": [
     {
      "Key": "kubernetes.io/role/elb",
      "Value": "1"
     },
     {
      "Key": "Name",
      "Value": "gpu-demo-v5/gpu-demo-v5-vpc/PublicSubnet3"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "gpu-demo-v5/gpu-demo-v5-vpc/PublicSubnet3/EIP"
   }
  },
  "gpudemov5vpcPublicSubnet3NATGatewayECC07F93": {
   "Type": "AWS::EC2::NatGateway",
   "Properties": {
    "SubnetId": {
     "Ref": "gpudemov5vpcPublicSubnet3SubnetA8414912"
    },
    "AllocationId": {
     "Fn::GetAtt": [
      "gpudemov5vpcPublicSubnet3EIP2A97ECC3",
      "AllocationId"
     ]
    },
    "Tags": [
     {
      "Key": "kubernetes.io/role/elb",
      "Value": "1"
     },
     {
      "Key": "Name",
      "Value": "gpu-demo-v5/gpu-demo-v5-vpc/PublicSubnet3"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "gpu-demo-v5/gpu-demo-v5-vpc/PublicSubnet3/NATGateway"
   }
  },
  "gpudemov5vpcPrivateSubnet1Subnet13C82EC1": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "VpcId": {
     "Ref": "gpudemov5vpcDEEC3660"
    },
    "AvailabilityZone": "ap-northeast-2a",
    "CidrBlock": "10.0.96.0/19",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "kubernetes.io/role/internal-elb",
      "Value": "1"
     },
     {
      "Key": "Name",
      "Value": "gpu-demo-v5/gpu-demo-v5-vpc/PrivateSubnet1"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "gpu-demo-v5/gpu-demo-v5-vpc/PrivateSubnet1/Subnet"
   }
  },
  "gpudemov5vpcPrivateSubnet1RouteTable06E4D4D5": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "VpcId": {
     "Ref": "gpudemov5vpcDEEC3660"
    },
    "Tags": [
     {
      "Key": "kubernetes.io/role/internal-elb",
      "Value": "1"
     },
     {
      "Key": "Name",
      "Value": "gpu-demo-v5/gpu-demo-v5-vpc/PrivateSubnet1"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "gpu-demo-v5/gpu-demo-v5-vpc/PrivateSubnet1/RouteTable"
   }
  },
  "gpudemov5vpcPrivateSubnet1RouteTableAssociation9A73C0AA": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "gpudemov5vpcPrivateSubnet1RouteTable06E4D4D5"
    },
    "SubnetId": {
     "Ref": "gpudemov5vpcPrivateSubnet1Subnet13C82EC1"
    }
   },
   "Metadata": {
    "aws:cdk:path": "gpu-demo-v5/gpu-demo-v5-vpc/PrivateSubnet1/RouteTableAssociation"
   }
  },
  "gpudemov5vpcPrivateSubnet1DefaultRouteDF9D6F1C": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "RouteTableId": {
     "Ref": "gpudemov5vpcPrivateSubnet1RouteTable06E4D4D5"
    },
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "gpudemov5vpcPublicSubnet1NATGateway7826681B"
    }
   },
   "Metadata": {
    "aws:cdk:path": "gpu-demo-v5/gpu-demo-v5-vpc/PrivateSubnet1/DefaultRoute"
   }
  },
  "gpudemov5vpcPrivateSubnet2SubnetAB49DF53": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "VpcId": {
     "Ref": "gpudemov5vpcDEEC3660"
    },
    "AvailabilityZone": "ap-northeast-2b",
    "CidrBlock": "10.0.128.0/19",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "kubernetes.io/role/internal-elb",
      "Value": "1"
     },
     {
      "Key": "Name",
      "Value": "gpu-demo-v5/gpu-demo-v5-vpc/PrivateSubnet2"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "gpu-demo-v5/gpu-demo-v5-vpc/PrivateSubnet2/Subnet"
   }
  },
  "gpudemov5vpcPrivateSubnet2RouteTableD93207DA": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "VpcId": {
     "Ref": "gpudemov5vpcDEEC3660"
    },
    "Tags": [
     {
      "Key": "kubernetes.io/role/internal-elb",
      "Value": "1"
     },
     {
      "Key": "Name",
      "Value": "gpu-demo-v5/gpu-demo-v5-vpc/PrivateSubnet2"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "gpu-demo-v5/gpu-demo-v5-vpc/PrivateSubnet2/RouteTable"
   }
  },
  "gpudemov5vpcPrivateSubnet2RouteTableAssociationB7FA72DC": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "gpudemov5vpcPrivateSubnet2RouteTableD93207DA"
    },
    "SubnetId": {
     "Ref": "gpudemov5vpcPrivateSubnet2SubnetAB49DF53"
    }
   },
   "Metadata": {
    "aws:cdk:path": "gpu-demo-v5/gpu-demo-v5-vpc/PrivateSubnet2/RouteTableAssociation"
   }
  },
  "gpudemov5vpcPrivateSubnet2DefaultRouteCB92F4C7": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "RouteTableId": {
     "Ref": "gpudemov5vpcPrivateSubnet2RouteTableD93207DA"
    },
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "gpudemov5vpcPublicSubnet2NATGatewayE2462A56"
    }
   },
   "Metadata": {
    "aws:cdk:path": "gpu-demo-v5/gpu-demo-v5-vpc/PrivateSubnet2/DefaultRoute"
   }
  },
  "gpudemov5vpcPrivateSubnet3Subnet4A52DFB8": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "VpcId": {
     "Ref": "gpudemov5vpcDEEC3660"
    },
    "AvailabilityZone": "ap-northeast-2c",
    "CidrBlock": "10.0.160.0/19",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "kubernetes.io/role/internal-elb",
      "Value": "1"
     },
     {
      "Key": "Name",
      "Value": "gpu-demo-v5/gpu-demo-v5-vpc/PrivateSubnet3"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "gpu-demo-v5/gpu-demo-v5-vpc/PrivateSubnet3/Subnet"
   }
  },
  "gpudemov5vpcPrivateSubnet3RouteTable44026F5A": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "VpcId": {
     "Ref": "gpudemov5vpcDEEC3660"
    },
    "Tags": [
     {
      "Key": "kubernetes.io/role/internal-elb",
      "Value": "1"
     },
     {
      "Key": "Name",
      "Value": "gpu-demo-v5/gpu-demo-v5-vpc/PrivateSubnet3"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "gpu-demo-v5/gpu-demo-v5-vpc/PrivateSubnet3/RouteTable"
   }
  },
  "gpudemov5vpcPrivateSubnet3RouteTableAssociation8AD0C0C8": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "gpudemov5vpcPrivateSubnet3RouteTable44026F5A"
    },
    "SubnetId": {
     "Ref": "gpudemov5vpcPrivateSubnet3Subnet4A52DFB8"
    }
   },
   "Metadata": {
    "aws:cdk:path": "gpu-demo-v5/gpu-demo-v5-vpc/PrivateSubnet3/RouteTableAssociation"
   }
  },
  "gpudemov5vpcPrivateSubnet3DefaultRoute7DB88540": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "RouteTableId": {
     "Ref": "gpudemov5vpcPrivateSubnet3RouteTable44026F5A"
    },
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "gpudemov5vpcPublicSubnet3NATGatewayECC07F93"
    }
   },
   "Metadata": {
    "aws:cdk:path": "gpu-demo-v5/gpu-demo-v5-vpc/PrivateSubnet3/DefaultRoute"
   }
  },
  "gpudemov5vpcIGW083CA596": {
   "Type": "AWS::EC2::InternetGateway",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "gpu-demo-v5/gpu-demo-v5-vpc"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "gpu-demo-v5/gpu-demo-v5-vpc/IGW"
   }
  },
  "gpudemov5vpcVPCGWF93B7396": {
   "Type": "AWS::EC2::VPCGatewayAttachment",
   "Properties": {
    "VpcId": {
     "Ref": "gpudemov5vpcDEEC3660"
    },
    "InternetGatewayId": {
     "Ref": "gpudemov5vpcIGW083CA596"
    }
   },
   "Metadata": {
    "aws:cdk:path": "gpu-demo-v5/gpu-demo-v5-vpc/VPCGW"
   }
  },
  "gpudemov5RoleB792A800": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "eks.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    },
    "ManagedPolicyArns": [
     {
      "Fn::Join": [
       "",
       [
        "arn:",
        {
         "Ref": "AWS::Partition"
        },
        ":iam::aws:policy/AmazonEKSClusterPolicy"
       ]
      ]
     }
    ]
   },
   "DependsOn": [
    "gpudemov5vpcIGW083CA596",
    "gpudemov5vpcPrivateSubnet1DefaultRouteDF9D6F1C",
    "gpudemov5vpcPrivateSubnet1RouteTable06E4D4D5",
    "gpudemov5vpcPrivateSubnet1RouteTableAssociation9A73C0AA",
    "gpudemov5vpcPrivateSubnet1Subnet13C82EC1",
    "gpudemov5vpcPrivateSubnet2DefaultRouteCB92F4C7",
    "gpudemov5vpcPrivateSubnet2RouteTableD93207DA",
    "gpudemov5vpcPrivateSubnet2RouteTableAssociationB7FA72DC",
    "gpudemov5vpcPrivateSubnet2SubnetAB49DF53",
    "gpudemov5vpcPrivateSubnet3DefaultRoute7DB88540",
    "gpudemov5vpcPrivateSubnet3RouteTable44026F5A",
    "gpudemov5vpcPrivateSubnet3RouteTableAssociation8AD0C0C8",
    "gpudemov5vpcPrivateSubnet3Subnet4A52DFB8",
    "gpudemov5vpcPublicSubnet1DefaultRouteDEA70FD6",
    "gpudemov5vpcPublicSubnet1EIP19CC3667",
    "gpudemov5vpcPublicSubnet1NATGateway7826681B",
    "gpudemov5vpcPublicSubnet1RouteTableA1EC268D",
    "gpudemov5vpcPublicSubnet1RouteTableAssociation01AD7DD5",
    "gpudemov5vpcPublicSubnet1SubnetC7F5E40A",
    "gpudemov5vpcPublicSubnet2DefaultRouteC2DAC168",
    "gpudemov5vpcPublicSubnet2EIP32C98C46",
    "gpudemov5vpcPublicSubnet2NATGatewayE2462A56",
    "gpudemov5vpcPublicSubnet2RouteTable361F1F26",
    "gpudemov5vpcPublicSubnet2RouteTableAssociation2833F744",
    "gpudemov5vpcPublicSubnet2Subnet962CFD69",
    "gpudemov5vpcPublicSubnet3DefaultRouteE2560B2D",
    "gpudemov5vpcPublicSubnet3EIP2A97ECC3",
    "gpudemov5vpcPublicSubnet3NATGatewayECC07F93",
    "gpudemov5vpcPublicSubnet3RouteTableC3BB4732",
    "gpudemov5vpcPublicSubnet3RouteTableAssociation49659663",
    "gpudemov5vpcPublicSubnet3SubnetA8414912",
    "gpudemov5vpcDEEC3660",
    "gpudemov5vpcVPCGWF93B7396"
   ],
   "Metadata": {
    "aws:cdk:path": "gpu-demo-v5/gpu-demo-v5/Role/Resource"
   }
  },
  "gpudemov5ControlPlaneSecurityGroupFB94EBC6": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "EKS Control Plane Security Group",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "VpcId": {
     "Ref": "gpudemov5vpcDEEC3660"
    }
   },
   "DependsOn": [
    "gpudemov5vpcIGW083CA596",
    "gpudemov5vpcPrivateSubnet1DefaultRouteDF9D6F1C",
    "gpudemov5vpcPrivateSubnet1RouteTable06E4D4D5",
    "gpudemov5vpcPrivateSubnet1RouteTableAssociation9A73C0AA",
    "gpudemov5vpcPrivateSubnet1Subnet13C82EC1",
    "gpudemov5vpcPrivateSubnet2DefaultRouteCB92F4C7",
    "gpudemov5vpcPrivateSubnet2RouteTableD93207DA",
    "gpudemov5vpcPrivateSubnet2RouteTableAssociationB7FA72DC",
    "gpudemov5vpcPrivateSubnet2SubnetAB49DF53",
    "gpudemov5vpcPrivateSubnet3DefaultRoute7DB88540",
    "gpudemov5vpcPrivateSubnet3RouteTable44026F5A",
    "gpudemov5vpcPrivateSubnet3RouteTableAssociation8AD0C0C8",
    "gpudemov5vpcPrivateSubnet3Subnet4A52DFB8",
    "gpudemov5vpcPublicSubnet1DefaultRouteDEA70FD6",
    "gpudemov5vpcPublicSubnet1EIP19CC3667",
    "gpudemov5vpcPublicSubnet1NATGateway7826681B",
    "gpudemov5vpcPublicSubnet1RouteTableA1EC268D",
    "gpudemov5vpcPublicSubnet1RouteTableAssociation01AD7DD5",
    "gpudemov5vpcPublicSubnet1SubnetC7F5E40A",
    "gpudemov5vpcPublicSubnet2DefaultRouteC2DAC168",
    "gpudemov5vpcPublicSubnet2EIP32C98C46",
    "gpudemov5vpcPublicSubnet2NATGatewayE2462A56",
    "gpudemov5vpcPublicSubnet2RouteTable361F1F26",
    "gpudemov5vpcPublicSubnet2RouteTableAssociation2833F744",
    "gpudemov5vpcPublicSubnet2Subnet962CFD69",
    "gpudemov5vpcPublicSubnet3DefaultRouteE2560B2D",
    "gpudemov5vpcPublicSubnet3EIP2A97ECC3",
    "gpudemov5vpcPublicSubnet3NATGatewayECC07F93",
    "gpudemov5vpcPublicSubnet3RouteTableC3BB4732",
    "gpudemov5vpcPublicSubnet3RouteTableAssociation49659663",
    "gpudemov5vpcPublicSubnet3SubnetA8414912",
    "gpudemov5vpcDEEC3660",
    "gpudemov5vpcVPCGWF93B7396"
   ],
   "Metadata": {
    "aws:cdk:path": "gpu-demo-v5/gpu-demo-v5/ControlPlaneSecurityGroup/Resource"
   }
  },
  "gpudemov5CreationRoleC916D891": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "AWS": {
         "Fn::Join": [
          "",
          [
           "arn:",
           {
            "Ref": "AWS::Partition"
           },
           ":iam::681747700094:root"
          ]
         ]
        }
       }
      }
     ],
     "Version": "2012-10-17"
    }
   },
   "DependsOn": [
    "gpudemov5vpcIGW083CA596",
    "gpudemov5vpcPrivateSubnet1DefaultRouteDF9D6F1C",
    "gpudemov5vpcPrivateSubnet1RouteTable06E4D4D5",
    "gpudemov5vpcPrivateSubnet1RouteTableAssociation9A73C0AA",
    "gpudemov5vpcPrivateSubnet1Subnet13C82EC1",
    "gpudemov5vpcPrivateSubnet2DefaultRouteCB92F4C7",
    "gpudemov5vpcPrivateSubnet2RouteTableD93207DA",
    "gpudemov5vpcPrivateSubnet2RouteTableAssociationB7FA72DC",
    "gpudemov5vpcPrivateSubnet2SubnetAB49DF53",
    "gpudemov5vpcPrivateSubnet3DefaultRoute7DB88540",
    "gpudemov5vpcPrivateSubnet3RouteTable44026F5A",
    "gpudemov5vpcPrivateSubnet3RouteTableAssociation8AD0C0C8",
    "gpudemov5vpcPrivateSubnet3Subnet4A52DFB8",
    "gpudemov5vpcPublicSubnet1DefaultRouteDEA70FD6",
    "gpudemov5vpcPublicSubnet1EIP19CC3667",
    "gpudemov5vpcPublicSubnet1NATGateway7826681B",
    "gpudemov5vpcPublicSubnet1RouteTableA1EC268D",
    "gpudemov5vpcPublicSubnet1RouteTableAssociation01AD7DD5",
    "gpudemov5vpcPublicSubnet1SubnetC7F5E40A",
    "gpudemov5vpcPublicSubnet2DefaultRouteC2DAC168",
    "gpudemov5vpcPublicSubnet2EIP32C98C46",
    "gpudemov5vpcPublicSubnet2NATGatewayE2462A56",
    "gpudemov5vpcPublicSubnet2RouteTable361F1F26",
    "gpudemov5vpcPublicSubnet2RouteTableAssociation2833F744",
    "gpudemov5vpcPublicSubnet2Subnet962CFD69",
    "gpudemov5vpcPublicSubnet3DefaultRouteE2560B2D",
    "gpudemov5vpcPublicSubnet3EIP2A97ECC3",
    "gpudemov5vpcPublicSubnet3NATGatewayECC07F93",
    "gpudemov5vpcPublicSubnet3RouteTableC3BB4732",
    "gpudemov5vpcPublicSubnet3RouteTableAssociation49659663",
    "gpudemov5vpcPublicSubnet3SubnetA8414912",
    "gpudemov5vpcDEEC3660",
    "gpudemov5vpcVPCGWF93B7396"
   ],
   "Metadata": {
    "aws:cdk:path": "gpu-demo-v5/gpu-demo-v5/Resource/CreationRole/Resource"
   }
  },
  "gpudemov5CreationRoleDefaultPolicy84F56F3D": {
   "Type": "AWS::IAM::Policy",
   "Properties": {
    "PolicyDocument": {
     "Statement": [
      {
       "Action": "iam:PassRole",
       "Effect": "Allow",
       "Resource": {
        "Fn::GetAtt": [
         "gpudemov5RoleB792A800",
         "Arn"
        ]
       }
      },
      {
       "Action": [
        "eks:CreateCluster",
        "eks:DescribeCluster",
        "eks:DescribeUpdate",
        "eks:DeleteCluster",
        "eks:UpdateClusterVersion",
        "eks:UpdateClusterConfig",
        "eks:CreateFargateProfile",
        "eks:TagResource",
        "eks:UntagResource"
       ],
       "Effect": "Allow",
       "Resource": [
        {
         "Fn::Join": [
          "",
          [
           "arn:",
           {
            "Ref": "AWS::Partition"
           },
           ":eks:ap-northeast-2:681747700094:cluster/gpu-demo-v5"
          ]
         ]
        },
        {
         "Fn::Join": [
          "",
          [
           "arn:",
           {
            "Ref": "AWS::Partition"
           },
           ":eks:ap-northeast-2:681747700094:cluster/gpu-demo-v5/*"
          ]
         ]
        }
       ]
      },
      {
       "Action": [
        "eks:DescribeFargateProfile",
        "eks:DeleteFargateProfile"
       ],
       "Effect": "Allow",
       "Resource": {
        "Fn::Join": [
         "",
         [
          "arn:",
          {
           "Ref": "AWS::Partition"
          },
          ":eks:ap-northeast-2:681747700094:fargateprofile/gpu-demo-v5/*"
         ]
        ]
       }
      },
      {
       "Action": [
        "iam:GetRole",
        "iam:listAttachedRolePolicies"
       ],
       "Effect": "Allow",
       "Resource": "*"
      },
      {
       "Action": "iam:CreateServiceLinkedRole",
       "Effect": "Allow",
       "Resource": "*"
      },
      {
       "Action": [
        "ec2:DescribeInstances",
        "ec2:DescribeNetworkInterfaces",
        "ec2:DescribeSecurityGroups",
        "ec2:DescribeSubnets",
        "ec2:DescribeRouteTables",
        "ec2:DescribeDhcpOptions",
        "ec2:DescribeVpcs"
       ],
       "Effect": "Allow",
       "Resource": "*"
      }
     ],
     "Version": "2012-10-17"
    },
    "PolicyName": "gpudemov5CreationRoleDefaultPolicy84F56F3D",
    "Roles": [
     {
      "Ref": "gpudemov5CreationRoleC916D891"
     }
    ]
   },
   "DependsOn": [
    "gpudemov5vpcIGW083CA596",
    "gpudemov5vpcPrivateSubnet1DefaultRouteDF9D6F1C",
    "gpudemov5vpcPrivateSubnet1RouteTable06E4D4D5",
    "gpudemov5vpcPrivateSubnet1RouteTableAssociation9A73C0AA",
    "gpudemov5vpcPrivateSubnet1Subnet13C82EC1",
    "gpudemov5vpcPrivateSubnet2DefaultRouteCB92F4C7",
    "gpudemov5vpcPrivateSubnet2RouteTableD93207DA",
    "gpudemov5vpcPrivateSubnet2RouteTableAssociationB7FA72DC",
    "gpudemov5vpcPrivateSubnet2SubnetAB49DF53",
    "gpudemov5vpcPrivateSubnet3DefaultRoute7DB88540",
    "gpudemov5vpcPrivateSubnet3RouteTable44026F5A",
    "gpudemov5vpcPrivateSubnet3RouteTableAssociation8AD0C0C8",
    "gpudemov5vpcPrivateSubnet3Subnet4A52DFB8",
    "gpudemov5vpcPublicSubnet1DefaultRouteDEA70FD6",
    "gpudemov5vpcPublicSubnet1EIP19CC3667",
    "gpudemov5vpcPublicSubnet1NATGateway7826681B",
    "gpudemov5vpcPublicSubnet1RouteTableA1EC268D",
    "gpudemov5vpcPublicSubnet1RouteTableAssociation01AD7DD5",
    "gpudemov5vpcPublicSubnet1SubnetC7F5E40A",
    "gpudemov5vpcPublicSubnet2DefaultRouteC2DAC168",
    "gpudemov5vpcPublicSubnet2EIP32C98C46",
    "gpudemov5vpcPublicSubnet2NATGatewayE2462A56",
    "gpudemov5vpcPublicSubnet2RouteTable361F1F26",
    "gpudemov5vpcPublicSubnet2RouteTableAssociation2833F744",
    "gpudemov5vpcPublicSubnet2Subnet962CFD69",
    "gpudemov5vpcPublicSubnet3DefaultRouteE2560B2D",
    "gpudemov5vpcPublicSubnet3EIP2A97ECC3",
    "gpudemov5vpcPublicSubnet3NATGatewayECC07F93",
    "gpudemov5vpcPublicSubnet3RouteTableC3BB4732",
    "gpudemov5vpcPublicSubnet3RouteTableAssociation49659663",
    "gpudemov5vpcPublicSubnet3SubnetA8414912",
    "gpudemov5vpcDEEC3660",
    "gpudemov5vpcVPCGWF93B7396"
   ],
   "Metadata": {
    "aws:cdk:path": "gpu-demo-v5/gpu-demo-v5/Resource/CreationRole/DefaultPolicy/Resource"
   }
  },
  "gpudemov50DE784B1": {
   "Type": "Custom::AWSCDK-EKS-Cluster",
   "Properties": {
    "ServiceToken": {
     "Fn::GetAtt": [
      "awscdkawseksClusterResourceProviderNestedStackawscdkawseksClusterResourceProviderNestedStackResource9827C454",
      "Outputs.gpudemov5awscdkawseksClusterResourceProviderframeworkonEvent282A0237Arn"
     ]
    },
    "Config": {
     "name": "gpu-demo-v5",
     "version": "1.21",
     "roleArn": {
      "Fn::GetAtt": [
       "gpudemov5RoleB792A800",
       "Arn"
      ]
     },
     "resourcesVpcConfig": {
      "subnetIds": [
       {
        "Ref": "gpudemov5vpcPublicSubnet1SubnetC7F5E40A"
       },
       {
        "Ref": "gpudemov5vpcPublicSubnet2Subnet962CFD69"
       },
       {
        "Ref": "gpudemov5vpcPublicSubnet3SubnetA8414912"
       },
       {
        "Ref": "gpudemov5vpcPrivateSubnet1Subnet13C82EC1"
       },
       {
        "Ref": "gpudemov5vpcPrivateSubnet2SubnetAB49DF53"
       },
       {
        "Ref": "gpudemov5vpcPrivateSubnet3Subnet4A52DFB8"
       }
      ],
      "securityGroupIds": [
       {
        "Fn::GetAtt": [
         "gpudemov5ControlPlaneSecurityGroupFB94EBC6",
         "GroupId"
        ]
       }
      ],
      "endpointPublicAccess": true,
      "endpointPrivateAccess": true
     }
    },
    "AssumeRoleArn": {
     "Fn::GetAtt": [
      "gpudemov5CreationRoleC916D891",
      "Arn"
     ]
    },
    "AttributesRevision": 2
   },
   "DependsOn": [
    "gpudemov5vpcIGW083CA596",
    "gpudemov5vpcPrivateSubnet1DefaultRouteDF9D6F1C",
    "gpudemov5vpcPrivateSubnet1RouteTable06E4D4D5",
    "gpudemov5vpcPrivateSubnet1RouteTableAssociation9A73C0AA",
    "gpudemov5vpcPrivateSubnet1Subnet13C82EC1",
    "gpudemov5vpcPrivateSubnet2DefaultRouteCB92F4C7",
    "gpudemov5vpcPrivateSubnet2RouteTableD93207DA",
    "gpudemov5vpcPrivateSubnet2RouteTableAssociationB7FA72DC",
    "gpudemov5vpcPrivateSubnet2SubnetAB49DF53",
    "gpudemov5vpcPrivateSubnet3DefaultRoute7DB88540",
    "gpudemov5vpcPrivateSubnet3RouteTable44026F5A",
    "gpudemov5vpcPrivateSubnet3RouteTableAssociation8AD0C0C8",
    "gpudemov5vpcPrivateSubnet3Subnet4A52DFB8",
    "gpudemov5vpcPublicSubnet1DefaultRouteDEA70FD6",
    "gpudemov5vpcPublicSubnet1EIP19CC3667",
    "gpudemov5vpcPublicSubnet1NATGateway7826681B",
    "gpudemov5vpcPublicSubnet1RouteTableA1EC268D",
    "gpudemov5vpcPublicSubnet1RouteTableAssociation01AD7DD5",
    "gpudemov5vpcPublicSubnet1SubnetC7F5E40A",
    "gpudemov5vpcPublicSubnet2DefaultRouteC2DAC168",
    "gpudemov5vpcPublicSubnet2EIP32C98C46",
    "gpudemov5vpcPublicSubnet2NATGatewayE2462A56",
    "gpudemov5vpcPublicSubnet2RouteTable361F1F26",
    "gpudemov5vpcPublicSubnet2RouteTableAssociation2833F744",
    "gpudemov5vpcPublicSubnet2Subnet962CFD69",
    "gpudemov5vpcPublicSubnet3DefaultRouteE2560B2D",
    "gpudemov5vpcPublicSubnet3EIP2A97ECC3",
    "gpudemov5vpcPublicSubnet3NATGatewayECC07F93",
    "gpudemov5vpcPublicSubnet3RouteTableC3BB4732",
    "gpudemov5vpcPublicSubnet3RouteTableAssociation49659663",
    "gpudemov5vpcPublicSubnet3SubnetA8414912",
    "gpudemov5vpcDEEC3660",
    "gpudemov5vpcVPCGWF93B7396",
    "gpudemov5CreationRoleDefaultPolicy84F56F3D",
    "gpudemov5CreationRoleC916D891"
   ],
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete",
   "Metadata": {
    "aws:cdk:path": "gpu-demo-v5/gpu-demo-v5/Resource/Resource/Default"
   }
  },
  "gpudemov5KubectlReadyBarrier1365E081": {
   "Type": "AWS::SSM::Parameter",
   "Properties": {
    "Type": "String",
    "Value": "aws:cdk:eks:kubectl-ready"
   },
   "DependsOn": [
    "gpudemov5vpcIGW083CA596",
    "gpudemov5vpcPrivateSubnet1DefaultRouteDF9D6F1C",
    "gpudemov5vpcPrivateSubnet1RouteTable06E4D4D5",
    "gpudemov5vpcPrivateSubnet1RouteTableAssociation9A73C0AA",
    "gpudemov5vpcPrivateSubnet1Subnet13C82EC1",
    "gpudemov5vpcPrivateSubnet2DefaultRouteCB92F4C7",
    "gpudemov5vpcPrivateSubnet2RouteTableD93207DA",
    "gpudemov5vpcPrivateSubnet2RouteTableAssociationB7FA72DC",
    "gpudemov5vpcPrivateSubnet2SubnetAB49DF53",
    "gpudemov5vpcPrivateSubnet3DefaultRoute7DB88540",
    "gpudemov5vpcPrivateSubnet3RouteTable44026F5A",
    "gpudemov5vpcPrivateSubnet3RouteTableAssociation8AD0C0C8",
    "gpudemov5vpcPrivateSubnet3Subnet4A52DFB8",
    "gpudemov5vpcPublicSubnet1DefaultRouteDEA70FD6",
    "gpudemov5vpcPublicSubnet1EIP19CC3667",
    "gpudemov5vpcPublicSubnet1NATGateway7826681B",
    "gpudemov5vpcPublicSubnet1RouteTableA1EC268D",
    "gpudemov5vpcPublicSubnet1RouteTableAssociation01AD7DD5",
    "gpudemov5vpcPublicSubnet1SubnetC7F5E40A",
    "gpudemov5vpcPublicSubnet2DefaultRouteC2DAC168",
    "gpudemov5vpcPublicSubnet2EIP32C98C46",
    "gpudemov5vpcPublicSubnet2NATGatewayE2462A56",
    "gpudemov5vpcPublicSubnet2RouteTable361F1F26",
    "gpudemov5vpcPublicSubnet2RouteTableAssociation2833F744",
    "gpudemov5vpcPublicSubnet2Subnet962CFD69",
    "gpudemov5vpcPublicSubnet3DefaultRouteE2560B2D",
    "gpudemov5vpcPublicSubnet3EIP2A97ECC3",
    "gpudemov5vpcPublicSubnet3NATGatewayECC07F93",
    "gpudemov5vpcPublicSubnet3RouteTableC3BB4732",
    "gpudemov5vpcPublicSubnet3RouteTableAssociation49659663",
    "gpudemov5vpcPublicSubnet3SubnetA8414912",
    "gpudemov5vpcDEEC3660",
    "gpudemov5vpcVPCGWF93B7396",
    "gpudemov5CreationRoleDefaultPolicy84F56F3D",
    "gpudemov5CreationRoleC916D891",
    "gpudemov50DE784B1"
   ],
   "Metadata": {
    "aws:cdk:path": "gpu-demo-v5/gpu-demo-v5/KubectlReadyBarrier"
   }
  },
  "gpudemov5MastersRole02954654": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "AWS": {
         "Fn::Join": [
          "",
          [
           "arn:",
           {
            "Ref": "AWS::Partition"
           },
           ":iam::681747700094:root"
          ]
         ]
        }
       }
      }
     ],
     "Version": "2012-10-17"
    }
   },
   "DependsOn": [
    "gpudemov5vpcIGW083CA596",
    "gpudemov5vpcPrivateSubnet1DefaultRouteDF9D6F1C",
    "gpudemov5vpcPrivateSubnet1RouteTable06E4D4D5",
    "gpudemov5vpcPrivateSubnet1RouteTableAssociation9A73C0AA",
    "gpudemov5vpcPrivateSubnet1Subnet13C82EC1",
    "gpudemov5vpcPrivateSubnet2DefaultRouteCB92F4C7",
    "gpudemov5vpcPrivateSubnet2RouteTableD93207DA",
    "gpudemov5vpcPrivateSubnet2RouteTableAssociationB7FA72DC",
    "gpudemov5vpcPrivateSubnet2SubnetAB49DF53",
    "gpudemov5vpcPrivateSubnet3DefaultRoute7DB88540",
    "gpudemov5vpcPrivateSubnet3RouteTable44026F5A",
    "gpudemov5vpcPrivateSubnet3RouteTableAssociation8AD0C0C8",
    "gpudemov5vpcPrivateSubnet3Subnet4A52DFB8",
    "gpudemov5vpcPublicSubnet1DefaultRouteDEA70FD6",
    "gpudemov5vpcPublicSubnet1EIP19CC3667",
    "gpudemov5vpcPublicSubnet1NATGateway7826681B",
    "gpudemov5vpcPublicSubnet1RouteTableA1EC268D",
    "gpudemov5vpcPublicSubnet1RouteTableAssociation01AD7DD5",
    "gpudemov5vpcPublicSubnet1SubnetC7F5E40A",
    "gpudemov5vpcPublicSubnet2DefaultRouteC2DAC168",
    "gpudemov5vpcPublicSubnet2EIP32C98C46",
    "gpudemov5vpcPublicSubnet2NATGatewayE2462A56",
    "gpudemov5vpcPublicSubnet2RouteTable361F1F26",
    "gpudemov5vpcPublicSubnet2RouteTableAssociation2833F744",
    "gpudemov5vpcPublicSubnet2Subnet962CFD69",
    "gpudemov5vpcPublicSubnet3DefaultRouteE2560B2D",
    "gpudemov5vpcPublicSubnet3EIP2A97ECC3",
    "gpudemov5vpcPublicSubnet3NATGatewayECC07F93",
    "gpudemov5vpcPublicSubnet3RouteTableC3BB4732",
    "gpudemov5vpcPublicSubnet3RouteTableAssociation49659663",
    "gpudemov5vpcPublicSubnet3SubnetA8414912",
    "gpudemov5vpcDEEC3660",
    "gpudemov5vpcVPCGWF93B7396"
   ],
   "Metadata": {
    "aws:cdk:path": "gpu-demo-v5/gpu-demo-v5/MastersRole/Resource"
   }
  },
  "gpudemov5AwsAuthmanifest1D54965F": {
   "Type": "Custom::AWSCDK-EKS-KubernetesResource",
   "Properties": {
    "ServiceToken": {
     "Fn::GetAtt": [
      "awscdkawseksKubectlProviderNestedStackawscdkawseksKubectlProviderNestedStackResourceA7AEBA6B",
      "Outputs.gpudemov5awscdkawseksKubectlProviderframeworkonEvent1455E86EArn"
     ]
    },
    "Manifest": {
     "Fn::Join": [
      "",
      [
       "[{\"apiVersion\":\"v1\",\"kind\":\"ConfigMap\",\"metadata\":{\"name\":\"aws-auth\",\"namespace\":\"kube-system\",\"labels\":{\"aws.cdk.eks/prune-c842e9c79ad29c9791c3d6bd37fab190a2a9fe179a\":\"\"}},\"data\":{\"mapRoles\":\"[{\\\"rolearn\\\":\\\"",
       {
        "Fn::GetAtt": [
         "gpudemov5MastersRole02954654",
         "Arn"
        ]
       },
       "\\\",\\\"username\\\":\\\"",
       {
        "Fn::GetAtt": [
         "gpudemov5MastersRole02954654",
         "Arn"
        ]
       },
       "\\\",\\\"groups\\\":[\\\"system:masters\\\"]},{\\\"rolearn\\\":\\\"",
       {
        "Fn::GetAtt": [
         "gpudemov5NodegroupcpungngNodeGroupRoleC5928EC9",
         "Arn"
        ]
       },
       "\\\",\\\"username\\\":\\\"system:node:{{EC2PrivateDNSName}}\\\",\\\"groups\\\":[\\\"system:bootstrappers\\\",\\\"system:nodes\\\"]},{\\\"rolearn\\\":\\\"",
       {
        "Fn::GetAtt": [
         "gpudemov5NodegroupgpungngNodeGroupRoleF277E2AA",
         "Arn"
        ]
       },
       "\\\",\\\"username\\\":\\\"system:node:{{EC2PrivateDNSName}}\\\",\\\"groups\\\":[\\\"system:bootstrappers\\\",\\\"system:nodes\\\"]}]\",\"mapUsers\":\"[]\",\"mapAccounts\":\"[]\"}}]"
      ]
     ]
    },
    "ClusterName": {
     "Ref": "gpudemov50DE784B1"
    },
    "RoleArn": {
     "Fn::GetAtt": [
      "gpudemov5CreationRoleC916D891",
      "Arn"
     ]
    },
    "PruneLabel": "aws.cdk.eks/prune-c842e9c79ad29c9791c3d6bd37fab190a2a9fe179a",
    "Overwrite": true
   },
   "DependsOn": [
    "gpudemov5vpcIGW083CA596",
    "gpudemov5vpcPrivateSubnet1DefaultRouteDF9D6F1C",
    "gpudemov5vpcPrivateSubnet1RouteTable06E4D4D5",
    "gpudemov5vpcPrivateSubnet1RouteTableAssociation9A73C0AA",
    "gpudemov5vpcPrivateSubnet1Subnet13C82EC1",
    "gpudemov5vpcPrivateSubnet2DefaultRouteCB92F4C7",
    "gpudemov5vpcPrivateSubnet2RouteTableD93207DA",
    "gpudemov5vpcPrivateSubnet2RouteTableAssociationB7FA72DC",
    "gpudemov5vpcPrivateSubnet2SubnetAB49DF53",
    "gpudemov5vpcPrivateSubnet3DefaultRoute7DB88540",
    "gpudemov5vpcPrivateSubnet3RouteTable44026F5A",
    "gpudemov5vpcPrivateSubnet3RouteTableAssociation8AD0C0C8",
    "gpudemov5vpcPrivateSubnet3Subnet4A52DFB8",
    "gpudemov5vpcPublicSubnet1DefaultRouteDEA70FD6",
    "gpudemov5vpcPublicSubnet1EIP19CC3667",
    "gpudemov5vpcPublicSubnet1NATGateway7826681B",
    "gpudemov5vpcPublicSubnet1RouteTableA1EC268D",
    "gpudemov5vpcPublicSubnet1RouteTableAssociation01AD7DD5",
    "gpudemov5vpcPublicSubnet1SubnetC7F5E40A",
    "gpudemov5vpcPublicSubnet2DefaultRouteC2DAC168",
    "gpudemov5vpcPublicSubnet2EIP32C98C46",
    "gpudemov5vpcPublicSubnet2NATGatewayE2462A56",
    "gpudemov5vpcPublicSubnet2RouteTable361F1F26",
    "gpudemov5vpcPublicSubnet2RouteTableAssociation2833F744",
    "gpudemov5vpcPublicSubnet2Subnet962CFD69",
    "gpudemov5vpcPublicSubnet3DefaultRouteE2560B2D",
    "gpudemov5vpcPublicSubnet3EIP2A97ECC3",
    "gpudemov5vpcPublicSubnet3NATGatewayECC07F93",
    "gpudemov5vpcPublicSubnet3RouteTableC3BB4732",
    "gpudemov5vpcPublicSubnet3RouteTableAssociation49659663",
    "gpudemov5vpcPublicSubnet3SubnetA8414912",
    "gpudemov5vpcDEEC3660",
    "gpudemov5vpcVPCGWF93B7396",
    "gpudemov5KubectlReadyBarrier1365E081"
   ],
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete",
   "Metadata": {
    "aws:cdk:path": "gpu-demo-v5/gpu-demo-v5/AwsAuth/manifest/Resource/Default"
   }
  },
  "gpudemov5NodegroupcpungngNodeGroupRoleC5928EC9": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "ec2.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    },
    "ManagedPolicyArns": [
     {
      "Fn::Join": [
       "",
       [
        "arn:",
        {
         "Ref": "AWS::Partition"
        },
        ":iam::aws:policy/AmazonEKSWorkerNodePolicy"
       ]
      ]
     },
     {
      "Fn::Join": [
       "",
       [
        "arn:",
        {
         "Ref": "AWS::Partition"
        },
        ":iam::aws:policy/AmazonEKS_CNI_Policy"
       ]
      ]
     },
     {
      "Fn::Join": [
       "",
       [
        "arn:",
        {
         "Ref": "AWS::Partition"
        },
        ":iam::aws:policy/AmazonEC2ContainerRegistryReadOnly"
       ]
      ]
     }
    ]
   },
   "DependsOn": [
    "gpudemov5vpcIGW083CA596",
    "gpudemov5vpcPrivateSubnet1DefaultRouteDF9D6F1C",
    "gpudemov5vpcPrivateSubnet1RouteTable06E4D4D5",
    "gpudemov5vpcPrivateSubnet1RouteTableAssociation9A73C0AA",
    "gpudemov5vpcPrivateSubnet1Subnet13C82EC1",
    "gpudemov5vpcPrivateSubnet2DefaultRouteCB92F4C7",
    "gpudemov5vpcPrivateSubnet2RouteTableD93207DA",
    "gpudemov5vpcPrivateSubnet2RouteTableAssociationB7FA72DC",
    "gpudemov5vpcPrivateSubnet2SubnetAB49DF53",
    "gpudemov5vpcPrivateSubnet3DefaultRoute7DB88540",
    "gpudemov5vpcPrivateSubnet3RouteTable44026F5A",
    "gpudemov5vpcPrivateSubnet3RouteTableAssociation8AD0C0C8",
    "gpudemov5vpcPrivateSubnet3Subnet4A52DFB8",
    "gpudemov5vpcPublicSubnet1DefaultRouteDEA70FD6",
    "gpudemov5vpcPublicSubnet1EIP19CC3667",
    "gpudemov5vpcPublicSubnet1NATGateway7826681B",
    "gpudemov5vpcPublicSubnet1RouteTableA1EC268D",
    "gpudemov5vpcPublicSubnet1RouteTableAssociation01AD7DD5",
    "gpudemov5vpcPublicSubnet1SubnetC7F5E40A",
    "gpudemov5vpcPublicSubnet2DefaultRouteC2DAC168",
    "gpudemov5vpcPublicSubnet2EIP32C98C46",
    "gpudemov5vpcPublicSubnet2NATGatewayE2462A56",
    "gpudemov5vpcPublicSubnet2RouteTable361F1F26",
    "gpudemov5vpcPublicSubnet2RouteTableAssociation2833F744",
    "gpudemov5vpcPublicSubnet2Subnet962CFD69",
    "gpudemov5vpcPublicSubnet3DefaultRouteE2560B2D",
    "gpudemov5vpcPublicSubnet3EIP2A97ECC3",
    "gpudemov5vpcPublicSubnet3NATGatewayECC07F93",
    "gpudemov5vpcPublicSubnet3RouteTableC3BB4732",
    "gpudemov5vpcPublicSubnet3RouteTableAssociation49659663",
    "gpudemov5vpcPublicSubnet3SubnetA8414912",
    "gpudemov5vpcDEEC3660",
    "gpudemov5vpcVPCGWF93B7396"
   ],
   "Metadata": {
    "aws:cdk:path": "gpu-demo-v5/gpu-demo-v5/Nodegroupcpu-ng-ng/NodeGroupRole/Resource"
   }
  },
  "gpudemov5Nodegroupcpungng7C8337C6": {
   "Type": "AWS::EKS::Nodegroup",
   "Properties": {
    "ClusterName": {
     "Ref": "gpudemov50DE784B1"
    },
    "NodeRole": {
     "Fn::GetAtt": [
      "gpudemov5NodegroupcpungngNodeGroupRoleC5928EC9",
      "Arn"
     ]
    },
    "Subnets": [
     {
      "Ref": "gpudemov5vpcPrivateSubnet1Subnet13C82EC1"
     },
     {
      "Ref": "gpudemov5vpcPrivateSubnet2SubnetAB49DF53"
     },
     {
      "Ref": "gpudemov5vpcPrivateSubnet3Subnet4A52DFB8"
     }
    ],
    "AmiType": "AL2_x86_64",
    "CapacityType": "SPOT",
    "ForceUpdateEnabled": true,
    "InstanceTypes": [
     "c5.large"
    ],
    "NodegroupName": "cpu-ng",
    "ScalingConfig": {
     "DesiredSize": 1,
     "MaxSize": 3,
     "MinSize": 1
    }
   },
   "DependsOn": [
    "gpudemov5vpcIGW083CA596",
    "gpudemov5vpcPrivateSubnet1DefaultRouteDF9D6F1C",
    "gpudemov5vpcPrivateSubnet1RouteTable06E4D4D5",
    "gpudemov5vpcPrivateSubnet1RouteTableAssociation9A73C0AA",
    "gpudemov5vpcPrivateSubnet1Subnet13C82EC1",
    "gpudemov5vpcPrivateSubnet2DefaultRouteCB92F4C7",
    "gpudemov5vpcPrivateSubnet2RouteTableD93207DA",
    "gpudemov5vpcPrivateSubnet2RouteTableAssociationB7FA72DC",
    "gpudemov5vpcPrivateSubnet2SubnetAB49DF53",
    "gpudemov5vpcPrivateSubnet3DefaultRoute7DB88540",
    "gpudemov5vpcPrivateSubnet3RouteTable44026F5A",
    "gpudemov5vpcPrivateSubnet3RouteTableAssociation8AD0C0C8",
    "gpudemov5vpcPrivateSubnet3Subnet4A52DFB8",
    "gpudemov5vpcPublicSubnet1DefaultRouteDEA70FD6",
    "gpudemov5vpcPublicSubnet1EIP19CC3667",
    "gpudemov5vpcPublicSubnet1NATGateway7826681B",
    "gpudemov5vpcPublicSubnet1RouteTableA1EC268D",
    "gpudemov5vpcPublicSubnet1RouteTableAssociation01AD7DD5",
    "gpudemov5vpcPublicSubnet1SubnetC7F5E40A",
    "gpudemov5vpcPublicSubnet2DefaultRouteC2DAC168",
    "gpudemov5vpcPublicSubnet2EIP32C98C46",
    "gpudemov5vpcPublicSubnet2NATGatewayE2462A56",
    "gpudemov5vpcPublicSubnet2RouteTable361F1F26",
    "gpudemov5vpcPublicSubnet2RouteTableAssociation2833F744",
    "gpudemov5vpcPublicSubnet2Subnet962CFD69",
    "gpudemov5vpcPublicSubnet3DefaultRouteE2560B2D",
    "gpudemov5vpcPublicSubnet3EIP2A97ECC3",
    "gpudemov5vpcPublicSubnet3NATGatewayECC07F93",
    "gpudemov5vpcPublicSubnet3RouteTableC3BB4732",
    "gpudemov5vpcPublicSubnet3RouteTableAssociation49659663",
    "gpudemov5vpcPublicSubnet3SubnetA8414912",
    "gpudemov5vpcDEEC3660",
    "gpudemov5vpcVPCGWF93B7396"
   ],
   "Metadata": {
    "aws:cdk:path": "gpu-demo-v5/gpu-demo-v5/Nodegroupcpu-ng-ng/Resource"
   }
  },
  "gpudemov5NodegroupgpungngNodeGroupRoleF277E2AA": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "ec2.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    },
    "ManagedPolicyArns": [
     {
      "Fn::Join": [
       "",
       [
        "arn:",
        {
         "Ref": "AWS::Partition"
        },
        ":iam::aws:policy/AmazonEKSWorkerNodePolicy"
       ]
      ]
     },
     {
      "Fn::Join": [
       "",
       [
        "arn:",
        {
         "Ref": "AWS::Partition"
        },
        ":iam::aws:policy/AmazonEKS_CNI_Policy"
       ]
      ]
     },
     {
      "Fn::Join": [
       "",
       [
        "arn:",
        {
         "Ref": "AWS::Partition"
        },
        ":iam::aws:policy/AmazonEC2ContainerRegistryReadOnly"
       ]
      ]
     }
    ]
   },
   "DependsOn": [
    "gpudemov5vpcIGW083CA596",
    "gpudemov5vpcPrivateSubnet1DefaultRouteDF9D6F1C",
    "gpudemov5vpcPrivateSubnet1RouteTable06E4D4D5",
    "gpudemov5vpcPrivateSubnet1RouteTableAssociation9A73C0AA",
    "gpudemov5vpcPrivateSubnet1Subnet13C82EC1",
    "gpudemov5vpcPrivateSubnet2DefaultRouteCB92F4C7",
    "gpudemov5vpcPrivateSubnet2RouteTableD93207DA",
    "gpudemov5vpcPrivateSubnet2RouteTableAssociationB7FA72DC",
    "gpudemov5vpcPrivateSubnet2SubnetAB49DF53",
    "gpudemov5vpcPrivateSubnet3DefaultRoute7DB88540",
    "gpudemov5vpcPrivateSubnet3RouteTable44026F5A",
    "gpudemov5vpcPrivateSubnet3RouteTableAssociation8AD0C0C8",
    "gpudemov5vpcPrivateSubnet3Subnet4A52DFB8",
    "gpudemov5vpcPublicSubnet1DefaultRouteDEA70FD6",
    "gpudemov5vpcPublicSubnet1EIP19CC3667",
    "gpudemov5vpcPublicSubnet1NATGateway7826681B",
    "gpudemov5vpcPublicSubnet1RouteTableA1EC268D",
    "gpudemov5vpcPublicSubnet1RouteTableAssociation01AD7DD5",
    "gpudemov5vpcPublicSubnet1SubnetC7F5E40A",
    "gpudemov5vpcPublicSubnet2DefaultRouteC2DAC168",
    "gpudemov5vpcPublicSubnet2EIP32C98C46",
    "gpudemov5vpcPublicSubnet2NATGatewayE2462A56",
    "gpudemov5vpcPublicSubnet2RouteTable361F1F26",
    "gpudemov5vpcPublicSubnet2RouteTableAssociation2833F744",
    "gpudemov5vpcPublicSubnet2Subnet962CFD69",
    "gpudemov5vpcPublicSubnet3DefaultRouteE2560B2D",
    "gpudemov5vpcPublicSubnet3EIP2A97ECC3",
    "gpudemov5vpcPublicSubnet3NATGatewayECC07F93",
    "gpudemov5vpcPublicSubnet3RouteTableC3BB4732",
    "gpudemov5vpcPublicSubnet3RouteTableAssociation49659663",
    "gpudemov5vpcPublicSubnet3SubnetA8414912",
    "gpudemov5vpcDEEC3660",
    "gpudemov5vpcVPCGWF93B7396"
   ],
   "Metadata": {
    "aws:cdk:path": "gpu-demo-v5/gpu-demo-v5/Nodegroupgpu-ng-ng/NodeGroupRole/Resource"
   }
  },
  "gpudemov5Nodegroupgpungng8443F3C4": {
   "Type": "AWS::EKS::Nodegroup",
   "Properties": {
    "ClusterName": {
     "Ref": "gpudemov50DE784B1"
    },
    "NodeRole": {
     "Fn::GetAtt": [
      "gpudemov5NodegroupgpungngNodeGroupRoleF277E2AA",
      "Arn"
     ]
    },
    "Subnets": [
     {
      "Ref": "gpudemov5vpcPrivateSubnet1Subnet13C82EC1"
     },
     {
      "Ref": "gpudemov5vpcPrivateSubnet2SubnetAB49DF53"
     },
     {
      "Ref": "gpudemov5vpcPrivateSubnet3Subnet4A52DFB8"
     }
    ],
    "AmiType": "AL2_x86_64_GPU",
    "CapacityType": "SPOT",
    "ForceUpdateEnabled": true,
    "InstanceTypes": [
     "p2.xlarge"
    ],
    "NodegroupName": "gpu-ng",
    "ScalingConfig": {
     "DesiredSize": 1,
     "MaxSize": 3,
     "MinSize": 1
    }
   },
   "DependsOn": [
    "gpudemov5vpcIGW083CA596",
    "gpudemov5vpcPrivateSubnet1DefaultRouteDF9D6F1C",
    "gpudemov5vpcPrivateSubnet1RouteTable06E4D4D5",
    "gpudemov5vpcPrivateSubnet1RouteTableAssociation9A73C0AA",
    "gpudemov5vpcPrivateSubnet1Subnet13C82EC1",
    "gpudemov5vpcPrivateSubnet2DefaultRouteCB92F4C7",
    "gpudemov5vpcPrivateSubnet2RouteTableD93207DA",
    "gpudemov5vpcPrivateSubnet2RouteTableAssociationB7FA72DC",
    "gpudemov5vpcPrivateSubnet2SubnetAB49DF53",
    "gpudemov5vpcPrivateSubnet3DefaultRoute7DB88540",
    "gpudemov5vpcPrivateSubnet3RouteTable44026F5A",
    "gpudemov5vpcPrivateSubnet3RouteTableAssociation8AD0C0C8",
    "gpudemov5vpcPrivateSubnet3Subnet4A52DFB8",
    "gpudemov5vpcPublicSubnet1DefaultRouteDEA70FD6",
    "gpudemov5vpcPublicSubnet1EIP19CC3667",
    "gpudemov5vpcPublicSubnet1NATGateway7826681B",
    "gpudemov5vpcPublicSubnet1RouteTableA1EC268D",
    "gpudemov5vpcPublicSubnet1RouteTableAssociation01AD7DD5",
    "gpudemov5vpcPublicSubnet1SubnetC7F5E40A",
    "gpudemov5vpcPublicSubnet2DefaultRouteC2DAC168",
    "gpudemov5vpcPublicSubnet2EIP32C98C46",
    "gpudemov5vpcPublicSubnet2NATGatewayE2462A56",
    "gpudemov5vpcPublicSubnet2RouteTable361F1F26",
    "gpudemov5vpcPublicSubnet2RouteTableAssociation2833F744",
    "gpudemov5vpcPublicSubnet2Subnet962CFD69",
    "gpudemov5vpcPublicSubnet3DefaultRouteE2560B2D",
    "gpudemov5vpcPublicSubnet3EIP2A97ECC3",
    "gpudemov5vpcPublicSubnet3NATGatewayECC07F93",
    "gpudemov5vpcPublicSubnet3RouteTableC3BB4732",
    "gpudemov5vpcPublicSubnet3RouteTableAssociation49659663",
    "gpudemov5vpcPublicSubnet3SubnetA8414912",
    "gpudemov5vpcDEEC3660",
    "gpudemov5vpcVPCGWF93B7396"
   ],
   "Metadata": {
    "aws:cdk:path": "gpu-demo-v5/gpu-demo-v5/Nodegroupgpu-ng-ng/Resource"
   }
  },
  "awscdkawseksClusterResourceProviderNestedStackawscdkawseksClusterResourceProviderNestedStackResource9827C454": {
   "Type": "AWS::CloudFormation::Stack",
   "Properties": {
    "TemplateURL": {
     "Fn::Join": [
      "",
      [
       "https://s3.ap-northeast-2.",
       {
        "Ref": "AWS::URLSuffix"
       },
       "/cdk-hnb659fds-assets-681747700094-ap-northeast-2/6aca76f65b24afcfa38c41676c61b2246c2b58d4b2e6540f91788c23f0b75859.json"
      ]
     ]
    },
    "Parameters": {
     "referencetogpudemov5CreationRole6DA69991Arn": {
      "Fn::GetAtt": [
       "gpudemov5CreationRoleC916D891",
       "Arn"
      ]
     }
    }
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete",
   "Metadata": {
    "aws:cdk:path": "gpu-demo-v5/@aws-cdk--aws-eks.ClusterResourceProvider.NestedStack/@aws-cdk--aws-eks.ClusterResourceProvider.NestedStackResource",
    "aws:asset:path": "gpudemov5awscdkawseksClusterResourceProvider99A08350.nested.template.json",
    "aws:asset:property": "TemplateURL"
   }
  },
  "awscdkawseksKubectlProviderNestedStackawscdkawseksKubectlProviderNestedStackResourceA7AEBA6B": {
   "Type": "AWS::CloudFormation::Stack",
   "Properties": {
    "TemplateURL": {
     "Fn::Join": [
      "",
      [
       "https://s3.ap-northeast-2.",
       {
        "Ref": "AWS::URLSuffix"
       },
       "/cdk-hnb659fds-assets-681747700094-ap-northeast-2/b2799bc43acf2dcdc6807474657b4a6651bf4997818628b299e069397625e79a.json"
      ]
     ]
    },
    "Parameters": {
     "referencetogpudemov526D3AC2BArn": {
      "Fn::GetAtt": [
       "gpudemov50DE784B1",
       "Arn"
      ]
     },
     "referencetogpudemov5CreationRole6DA69991Arn": {
      "Fn::GetAtt": [
       "gpudemov5CreationRoleC916D891",
       "Arn"
      ]
     },
     "referencetogpudemov5gpudemov5vpcPrivateSubnet1Subnet4688F312Ref": {
      "Ref": "gpudemov5vpcPrivateSubnet1Subnet13C82EC1"
     },
     "referencetogpudemov5gpudemov5vpcPrivateSubnet2SubnetB9E6E8B0Ref": {
      "Ref": "gpudemov5vpcPrivateSubnet2SubnetAB49DF53"
     },
     "referencetogpudemov5gpudemov5vpcPrivateSubnet3Subnet4C3F2B2FRef": {
      "Ref": "gpudemov5vpcPrivateSubnet3Subnet4A52DFB8"
     },
     "referencetogpudemov526D3AC2BClusterSecurityGroupId": {
      "Fn::GetAtt": [
       "gpudemov50DE784B1",
       "ClusterSecurityGroupId"
      ]
     }
    }
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete",
   "Metadata": {
    "aws:cdk:path": "gpu-demo-v5/@aws-cdk--aws-eks.KubectlProvider.NestedStack/@aws-cdk--aws-eks.KubectlProvider.NestedStackResource",
    "aws:asset:path": "gpudemov5awscdkawseksKubectlProvider2DE88F7D.nested.template.json",
    "aws:asset:property": "TemplateURL"
   }
  },
  "CDKMetadata": {
   "Type": "AWS::CDK::Metadata",
   "Properties": {
    "Analytics": "v2:deflate64:H4sIAAAAAAAA/01QTW+DMAz9Lb2brOXSM0JTVU3rEEy9TiF11xRIUGIXVYj/vgBr6el9yHl+cSzitVivZOcjdaqiWpeiL0iqCoL106OKRX9sFaRnc8xSyListSq4NEijt7DcMuG3LGtc/MVLvLdKS9LWPIdH8r7PRjhI2knCTt4hc/oW6BK8N4Qu8MfA3ORfJRS6Xho0BAUqdpruO2e5nTq8GgNg5UWf1uxDHCSdT5gu8MHlFI7+Uxp9Rk9wsCf8fWQ8xQBaNqLP7fy/CTMbbjEVmtkwQI7eslNhJuyxzSLDkxf+xdTyfMDx1gOYsEdc/dttsxVbsVldvdaRY0O6QZHP+AeuGRvkqwEAAA=="
   },
   "Metadata": {
    "aws:cdk:path": "gpu-demo-v5/CDKMetadata/Default"
   }
  }
 },
 "Outputs": {
  "gpudemov5ClusterName93BA140D": {
   "Value": {
    "Ref": "gpudemov50DE784B1"
   }
  },
  "gpudemov5ConfigCommandAE8F0152": {
   "Value": {
    "Fn::Join": [
     "",
     [
      "aws eks update-kubeconfig --name ",
      {
       "Ref": "gpudemov50DE784B1"
      },
      " --region ap-northeast-2 --role-arn ",
      {
       "Fn::GetAtt": [
        "gpudemov5MastersRole02954654",
        "Arn"
       ]
      }
     ]
    ]
   }
  },
  "gpudemov5GetTokenCommand461DC090": {
   "Value": {
    "Fn::Join": [
     "",
     [
      "aws eks get-token --cluster-name ",
      {
       "Ref": "gpudemov50DE784B1"
      },
      " --region ap-northeast-2 --role-arn ",
      {
       "Fn::GetAtt": [
        "gpudemov5MastersRole02954654",
        "Arn"
       ]
      }
     ]
    ]
   }
  }
 },
 "Parameters": {
  "BootstrapVersion": {
   "Type": "AWS::SSM::Parameter::Value<String>",
   "Default": "/cdk-bootstrap/hnb659fds/version",
   "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]"
  }
 },
 "Rules": {
  "CheckBootstrapVersion": {
   "Assertions": [
    {
     "Assert": {
      "Fn::Not": [
       {
        "Fn::Contains": [
         [
          "1",
          "2",
          "3",
          "4",
          "5"
         ],
         {
          "Ref": "BootstrapVersion"
         }
        ]
       }
      ]
     },
     "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI."
    }
   ]
  }
 }
}
